--- a/config/database.yml
+++ b/config/database.yml
@@ -1,10 +1,9 @@
-# SQLite version 3.x
-#   gem install sqlite3-ruby (not necessary on OS X Leopard)
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
+  adapter: mysql
+  encoding: utf8
+  database: wearables
   pool: 5
-  timeout: 5000
+  username: wearables
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
