show outfit page

--- a/config/assets.yml
+++ b/config/assets.yml
@@ -13,3 +13,7 @@ javascripts:
   new_outfit_package:
     - public/javascripts/pet_query.js
     - public/javascripts/outfits/new.js
+  
+  show_outfit_package:
+    - public/javascripts/wardrobe.js
+    - public/javascripts/outfits/show.js
