--- a/config/assets.yml
+++ b/config/assets.yml
@@ -3,10 +3,12 @@ embed_assets: on
 
 javascripts:
   bulk_pets_package:
+    - public/javascripts/ajax_auth.js
     - public/javascripts/pet_query.js
     - public/javascripts/pets/bulk.js
     
   edit_outfit_package:
+    - public/javascripts/ajax_auth.js
     - public/javascripts/jquery.jgrowl.js
     - public/javascripts/wardrobe.js
     - public/javascripts/outfits/edit.js
