ugh, why are basic hashes in a yaml file instead of the database? :(

--- a/config/basic_type_hashes.yml
+++ b/config/basic_type_hashes.yml
@@ -63,6 +63,7 @@ chomby:
   baby: v2l4d2nf
   8-bit: 96lgkwnj
   maraquan: v5x466sl
+  mutant: b4l8of99
 cybunny: 
   blue: v8shwcoq
   green: xl6msllv
@@ -171,6 +172,7 @@ kacheek:
   yellow: 4gsrb59g
   baby: nw424vgn
   mutant: fq6nnvwh
+  maraquan: z3gfj7rx
 kau: 
   blue: ktlxmrtr
   green: x9ww69qo
@@ -247,6 +249,7 @@ lutari:
   red: lgws33oo
   yellow: 8x37fgjf
   baby: jnbjxvf5
+  mutant: k37r5lc6
 meerca: 
   blue: wwwhjf88
   green: lg9bb6tf
@@ -284,6 +287,7 @@ ogrin:
   yellow: rjzmx24v
   baby: bfrh323n
   mutant: t6s8hrzx
+  maraquan: f4f2s8tk
 peophin: 
   blue: 996t7zfg
   green: c9qo7zzt
@@ -298,6 +302,7 @@ poogle:
   yellow: xozlhd68
   baby: b2467jkz
   maraquan: z44rk3xg
+  mutant: hn9v6koh
 pteri: 
   blue: 82d369sm
   green: slqmqr78
@@ -360,6 +365,7 @@ tonu:
   yellow: 5bhqs7sv
   baby: h6jd7kw8
   mutant: 59kr9c96
+  maraquan: zx39gx94
 tuskaninny: 
   blue: jj6t6cqd
   green: stl4mm78
@@ -389,6 +395,7 @@ wocky:
   red: 743smd5v
   yellow: dnr2kj4b
   baby: s7tld393
+  maraquan: 6m2otk7o
 xweetok: 
   blue: ddhdrt2o
   green: thzwbqsq
