basic fits functionality in search

--- a/app/flex/flex_search.yml
+++ b/app/flex/flex_search.yml
@@ -29,6 +29,9 @@ ANCHORS:
                 user_id: <<user_id>>
             - term:
                 owned: <<user_closet_hanger_ownership>>
+  - &body_id_partial
+    term:
+      body_id: <<body_id>>
 
 _names:
   *name_partial
@@ -60,6 +63,12 @@ _user_closet_hanger_ownerships:
 _negative_user_closet_hanger_ownerships:
   *user_closet_hangers_ownership_partial
 
+_body_ids:
+  *body_id_partial
+
+_negative_body_ids:
+  *body_id_partial
+
 item_search:
   - query:
       bool:
@@ -73,11 +82,13 @@ item_search:
           - <<_occupied_zone_ids= ~>>
           - <<_restricted_zone_ids= ~>>
           - <<_user_closet_hanger_ownerships= ~>>
+          - <<_body_ids= ~>>
         must_not:
           - <<_negative_names= ~>>
           - <<_negative_species_support_ids= ~>>
           - <<_negative_occupied_zone_ids= ~>>
           - <<_negative_restricted_zone_ids= ~>>
           - <<_negative_user_closet_hanger_ownerships= ~>>
+          - <<_negative_body_ids= ~>>
     sort:
       - name.<<locale>>.untouched
