vandagyre basic colors (ugh, should be in database)

--- a/config/basic_type_hashes.yml
+++ b/config/basic_type_hashes.yml
@@ -418,3 +418,8 @@ zafara:
   baby: 93c22wgn
   maraquan: b2gxlo5h
   mutant: 9c9frk9g
+vandagyre:
+  blue: orsct24j
+  green: 6d3gd6t5
+  red: 6kv8lfjl
+  yellow: xkntzsww
