Add openneo_id to database.yml
This will enable us to access the auth records, which we store in a separate database for weird legacy reasons!

We don't do anything else yet, just set up the connection to be available.

(NOTE: This commit was a bit of a history rewrite: we started working on this with `database.yml` still gitignored, but then in 8fb6e82 we added it back in to be able to fix a bug in 44c42f9. So previously this branch added back `database.yml` to git *and* added `openneo_id` to it, but since then I've rebased against the other changes, and rewrote history to make this a change to *just* add the database! I also moved it in the timeline, to be before some of the other things that depend on it.)

--- a/config/database.yml
+++ b/config/database.yml
@@ -1,13 +1,29 @@
 development:
-  adapter: mysql2
-  database: openneo_impress
-  username: openneo_impress
-  password: openneo_impress
-  pool: 5
-  variables:
-    sql_mode: TRADITIONAL
+  primary:
+    adapter: mysql2
+    database: openneo_impress
+    username: openneo_impress
+    password: openneo_impress
+    pool: 5
+    variables:
+      sql_mode: TRADITIONAL
+
+  openneo_id:
+    adapter: mysql2
+    database: openneo_id
+    username: openneo_impress
+    password: openneo_impress
+    pool: 2
+    variables:
+      sql_mode: TRADITIONAL
 
 production:
-  url: <%= ENV['DATABASE_URL_PRIMARY'] %>
-  variables:
-    sql_mode: TRADITIONAL
+  primary:
+    url: <%= ENV['DATABASE_URL_PRIMARY'] %>
+    variables:
+      sql_mode: TRADITIONAL
+
+  openneo_id:
+    url: <%= ENV['DATABASE_URL_OPENNEO_ID'] %>
+    variables:
+      sql_mode: TRADITIONAL
