Set SQL mode, fix bug in `-fits:blue-acara` search
Without this, searches for negative of `fits` or `species` would crash, bc somewhere Rails set the default SQL mode to be stricter than before. This just sets it back!

--- a/config/database.yml
+++ b/config/database.yml
@@ -4,6 +4,10 @@ development:
   username: openneo_impress
   password: openneo_impress
   pool: 5
+  variables:
+    sql_mode: TRADITIONAL
 
 production:
   url: <%= ENV['DATABASE_URL_PRIMARY'] %>
+  variables:
+    sql_mode: TRADITIONAL
