--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,16 @@ log/*.log
 tmp/**/*
 .env
 .vagrant
+
+/app/assets/builds/*
+!/app/assets/builds/.keep
+
+/node_modules
+
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
