--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@emotion/styled": "^11.0.0",
     "@loadable/component": "^5.12.0",
     "@sentry/react": "^5.30.0",
+    "@sentry/tracing": "^5.30.0",
+    "apollo-link-persisted-queries": "^0.2.2",
     "easeljs": "^1.0.2",
     "esbuild": "^0.19.0",
     "framer-motion": "^4.1.11",
@@ -25,6 +27,7 @@
     "tweenjs": "^1.0.2"
   },
   "scripts": {
-    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=/assets --loader:.js=jsx --loader:.png=file --loader:.svg=file --loader:.min.js=text"
+    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=/assets --loader:.js=jsx --loader:.png=file --loader:.svg=file --loader:.min.js=text",
+    "build:production": "yarn build --minify"
   }
 }
