--- a/deploy/setup.yml
+++ b/deploy/setup.yml
@@ -323,6 +323,12 @@
 
             location @app {
               proxy_pass http://127.0.0.1:3000;
+              proxy_set_header X-Real-IP $remote_addr;
+              proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+              proxy_set_header X-Forwarded-Proto https;
+              proxy_set_header X-Forwarded-Server $host;
+              proxy_set_header Host $http_host;
+              proxy_redirect off;
             }
           }
         dest: /etc/nginx/sites-available/impress.conf
