--- a/package.json
+++ b/package.json
@@ -29,6 +29,6 @@
   "scripts": {
     "build": "yarn build:base --minify",
     "build:base": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=/assets --asset-names=[name]-[hash].digested --loader:.js=jsx --loader:.png=file --loader:.svg=file --loader:.min.js=text",
-    "dev": "yarn build:base --watch"
+    "dev": "yarn build:base --watch --public-path=/dev-assets"
   }
 }
