[WIP] Build a dev container
Idk why, but unlike my previous experience with Rails devcontainers, this time the setup process is running so wildly slowly?

Might just be a transient issue on my machine, maybe something that would be improved with a restart and trying again another time? Or could be something about the MySQL image that doesn't run great in this context?

In any case, I'm just gonna set this down for now!

--- a/config/database.yml
+++ b/config/database.yml
@@ -2,8 +2,8 @@ development:
   primary:
     adapter: mysql2
     database: openneo_impress
-    username: openneo_impress
-    password: openneo_impress
+    username: impress_dev
+    password: impress_dev
     pool: 5
     variables:
       sql_mode: TRADITIONAL
@@ -11,8 +11,8 @@ development:
   openneo_id:
     adapter: mysql2
     database: openneo_id
-    username: openneo_impress
-    password: openneo_impress
+    username: impress_dev
+    password: impress_dev
     pool: 2
     variables:
       sql_mode: TRADITIONAL
