Move comment in setup.yml
I'm not sure why this was causing problems? especially why *now*? But I was seeing errors in systemctl of it trying to parse this comment as an environment variable soooo ok!

Could just be an intermittent thing where like, a byte got dropped last time we transferred this file or something? but whatever, this has fixed it and also is reasonable comment placement!

--- a/deploy/setup.yml
+++ b/deploy/setup.yml
@@ -252,7 +252,8 @@
           WorkingDirectory=/srv/impress/current
           ExecStart=/opt/ruby-3.1.4/bin/bundle exec puma --port=3000
           Environment="RAILS_ENV=production"
-          Environment="EXECJS_RUNTIME=Disabled" ; to save us from installing Node
+          ; Set EXECJS_RUNTIME to save us from needing to install Node
+          Environment="EXECJS_RUNTIME=Disabled"
           EnvironmentFile=/srv/impress/shared/production.env
 
           ; Some security directives, adapted from Akkoma's service file, they seem like sensible defaults!
