--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "react-transition-group": "^4.3.0",
     "tweenjs": "^1.0.2"
   },
+  "devDependencies": {
+    "prettier": "^3.0.3"
+  },
   "scripts": {
     "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds --public-path=/assets --asset-names=[name]-[hash].digested --loader:.js=jsx --loader:.png=file --loader:.svg=file --loader:.min.js=text",
     "dev": "yarn build --watch --public-path=/dev-assets"
