Upgrade to Rails 7.1.1
The usual stuff! Installed the new gem and its new deps, ran
`bin/rails app:update` and did my best to manually merge the dev/prod
config files with the new canonical defaults, deleted some migrations I
don't think are relevant to us, and yeah!

Also, Rails 7.1 seems to need `libyaml-dev` installed, so I added that
to the `deploy/setup.yml` playbook!

One thing to note is that, while I was here, I turned on some settings
relating to our use of SSL that technically weren't on before. This
should be fine and helpful? But if stuff breaks, well, check those!

--- a/deploy/setup.yml
+++ b/deploy/setup.yml
@@ -164,7 +164,9 @@
 
     - name: Install system dependencies for impress's Ruby gems
       apt:
-        name: libmysqlclient-dev
+        name:
+          - libmysqlclient-dev
+          - libyaml-dev
 
     - name: Create the app folder
       file:
